# confetti

./: .gitignore  .readthedocs.yml  CFMTS.ipynb  CFUTS.ipynb  CHANGELOG.md  Cargo.toml  LICENSE  Optimization.ipynb  README.md  confetti.py  config.py  demo.py  experiments.py  main.py  naive_solutions.csv  pyproject.toml  readme.md  requirements.txt  ruff.toml  test.py  ty.toml
.github/workflows/: ci.yaml  ci.yml  release.yml  wheels.yml
Counterfactuals/: confetti.py
Counterfactuals/CAM/: cam_univariate.py  class_activation_mapping.py
Counterfactuals/Native_Guides/: guides.py  univariate_guides.py
Counterfactuals/utils/: counterfactual_utils.py
Models/: ArticularyWordRecognition_best_model.hdf5  ArticularyWordRecognition_last_model.hdf5  ArticularyWordRecognition_model_init.hdf5  AtrialFibrillation_best_model.hdf5  AtrialFibrillation_last_model.hdf5  AtrialFibrillation_model_init.hdf5  BasicMotions_best_model.hdf5  BasicMotions_last_model.hdf5  BasicMotions_model_init.hdf5  Cricket_best_model.hdf5  Cricket_last_model.hdf5  Cricket_model_init.hdf5  ERing_best_model.hdf5  ERing_last_model.hdf5  ERing_model_init.hdf5  EigenWorms_best_model.hdf5  EigenWorms_last_model.hdf5  EigenWorms_model_init.hdf5  Epilepsy_best_model.hdf5  Epilepsy_last_model.hdf5  Epilepsy_model_init.hdf5  EthanolConcentration_best_model.hdf5  EthanolConcentration_last_model.hdf5  EthanolConcentration_model_init.hdf5  FaceDetection_model_init.hdf5  FingerMovements_best_model.hdf5  FingerMovements_last_model.hdf5  FingerMovements_model_init.hdf5  HandMovementDirection_best_model.hdf5  HandMovementDirection_last_model.hdf5  HandMovementDirection_model_init.hdf5  Heartbeat_best_model.hdf5  Heartbeat_last_model.hdf5  Heartbeat_model_init.hdf5  LSST_best_model.hdf5  LSST_last_model.hdf5  LSST_model_init.hdf5  Libras_best_model.hdf5  Libras_last_model.hdf5  Libras_model_init.hdf5  (+26 more)
Models/classifiers/: fcn.py
Notebooks/: fcn_multivariate.ipynb
Optimization/: problem.py
Solutions/: ArticularyWordRecognition_naive_counterfactuals.csv  ArticularyWordRecognition_optimized_counterfactuals.csv  AtrialFibrillation_naive_counterfactuals.csv  AtrialFibrillation_optimized_counterfactuals.csv  BasicMotions_naive_counterfactuals.csv  BasicMotions_optimized_counterfactuals.csv  ERing_naive_counterfactuals.csv  Epilepsy_naive_counterfactuals.csv  Libras_naive_counterfactuals.csv  Libras_optimized_counterfactuals.csv  NATOPS_naive_counterfactuals.csv  NATOPS_optimized_counterfactuals.csv  RacketSports_naive_counterfactuals.csv  RacketSports_optimized_counterfactuals.csv
benchmark/: __init__.py  comte.py  comte_fcn.py  confetti_fcn.py  reproduce_benchmark.py  sets.py  sets_fcn.py  tsevo.py  tsevo_fcn.py  tsevo_resnet.py
benchmark/data/: generate_samples.py  validate_samples.py
benchmark/evaluations/: evaluate_objectives_experiment_results.ipynb  evaluate_proximity_metric_results.ipynb  evaluations.py  evaluator.py  rankings.py  wilcoxon.py
benchmark/experiments/: execution_times.py  experiment_execution_times_per_shape.py  experiment_number_of_partitions.py  experiment_proximity_metric.py  experiments_objectives.py  number_of_partitions.py
benchmark/generators/: all.py  comte.py  comte_fcn.py  comte_resnet.py  confetti.py  confetti_generator.py  confetti_resnet.py  patch_tsinterpret.py  sets.py  sets_resnet.py  tsevo.py
confetti/: __init__.py
confetti/CAM/: __init__.py  class_activation_map.py
confetti/explainer/: confetti_explainer.py  problem.py  utils.py  visualizer.py
docs/: conf.py  constraints.rst  example.rst  index.rst  tabular_example.rst  tabular_usage.rst  usage.rst
docs/api/: confetti.algorithm.rst  confetti.attribution.rst  confetti.constraints.rst  confetti.counterfactual_structs.rst  confetti.distances.rst  confetti.errors.rst  confetti.explainer.rst  confetti.tabular.rst  confetti.utils.rst  confetti.visualizations.rst  index.rst
examples/: __init__.py  confetti_demo.ipynb
examples/models/: __init__.py  (+1 more)
figures/: exploratory_images.py  figures.py  visualizer.py
figures_tables/: figures.ipynb  tables.ipynb  visualizer.py
models/: fcn.py  resnet.py  train_models.py  utils.py
notebooks/: confetti_mts.ipynb  confetti_resnet.ipynb  quick_run.ipynb  results_exploration.ipynb
paper/: config.py
src/: __init__.py  lib.rs
tests/: conftest.py  test_adapters.py  test_docs_example.py  test_visualizations.py  toy_fcn.py
(+161 files in other folders)
