[project]
name = "confetti"
version = "0.1.0"
description = "A multi-objective counterfactual explanation method for deep learning based multivariate time series."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["counterfactual explanations", "time series", "multi-objective optimization", "deep learning"]
authors = [
  {name = "Alan Paredes Cetina", email = "alan.paredes@uni.lu"},
  {name = "Raoni Lourenco", email = "raoni.lourenco@uni.lu"},
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "joblib>=1.2",
    "keras>=3.12.0",
    "tensorflow>=2.18.0",
    "scikit-learn>=1.3",
    "pymoo>=0.6.1",
    "tslearn>=0.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "ty>=0.0.1a25",
    "pytest",
    "sphinx",
    "furo"
]

plots = [
    "matplotlib>=3.8",
]
