[project]
name = "confetti-ts"
version = "0.1.0"
description = "A multi-objective counterfactual explanation method for deep learning based multivariate time series."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["counterfactual explanations", "time series", "multi-objective optimization", "deep learning"]
authors = [
  {name = "Alan Paredes Cetina", email = "alan.paredes@uni.lu"},
  {name = "Raoni Lourenco", email = "raoni.lourenco@uni.lu"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "numpy>=2.3",
    "pandas>=2.2.3",
    "joblib>=1.2",
    "keras>=3.12.0",
    "tensorflow>=2.20.0",
    "scikit-learn>=1.7.2",
    "pymoo>=0.6.1",
    "tslearn>=0.6",
]

[project.urls]
Homepage = "https://github.com/serval-uni-lu/confetti"
Documentation = "https://serval-uni-lu.github.io/confetti"
Repository = "https://github.com/serval-uni-lu/confetti"
Issues = "https://github.com/serval-uni-lu/confetti/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "ty>=0.0.1a25",
    "pytest",
    "sphinx",
    "furo"
]

plots = [
    "matplotlib>=3.8",
]
