[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "confetti-ts"
version = "1.0.0"
description = "A multi-objective counterfactual explanation method for time series classifiers."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["counterfactual explanations", "time series", "multi-objective optimization", "deep learning"]
authors = [
  {name = "Alan Paredes Cetina", email = "alan.paredes@uni.lu"},
  {name = "Raoni Lourenco", email = "raoni.lourenco@uni.lu"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "numpy>=2.3",
    "pandas>=2.2.3",
    "joblib>=1.2",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
keras = ["keras>=3.12.0", "tensorflow>=2.20.0"]
torch = ["torch>=2.0"]
all = ["keras>=3.12.0", "tensorflow>=2.20.0", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/serval-uni-lu/confetti"
Documentation = "https://confetti-ts.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/serval-uni-lu/confetti"
Issues = "https://github.com/serval-uni-lu/confetti/issues"

[tool.maturin]
python-source = "src"
module-name = "confetti._rust_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "ty>=0.0.1a25",
    "pytest",
    "sphinx",
    "furo"
]

plots = [
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
